--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,5 @@
-<<p>Some of my favorite post-punk and Goth songs!</p>
+<h1>My Music List</h1>
+<p>Some of my favorite post-punk and Goth songs!</p>
 <ul>
 <ol>
 <li>"Love Will Tear Us Apart"</li>
